...
    <string name="update_prompt_title">發現新版本</string>
    <string name="update_prompt_version">版本 %1$s</string>
    <string name="update_prompt_message">新版本已可下載。你可以現在更新，或稍後再處理。</string>
    <string name="update_action_update">前往更新</string>
    <string name="update_action_later">稍後提醒</string>
    <string name="update_action_skip">略過此版本</string>
    <string name="update_downloaded_message">更新已下載，可以重新啟動並安裝。</string>
    <string name="update_downloaded_action">重新啟動並安裝</string>
    <string name="update_dot_description">有新版本可用</string>
    <string name="update_row_content_description">%1$s，%2$s</string>
    <string name="update_open_failed">暫時無法開啟 Google Play，請稍後重試</string>
    <string name="update_website_failed">暫時無法開啟下載網站，請稍後重試</string>
    <string name="update_complete_failed">暫時無法完成更新，請稍後重試</string>
    <string name="update_play_unavailable">Google Play 暫時不可用</string>
...
